2009-02-17  Frank Ch. Eigler  <fche@elastic.org>

	* configury throughout: autoreconf -f -i'd.

2009-02-17  Frank Ch. Eigler  <fche@elastic.org>

	* includes/sys/sdt.h: Change all parameter register constraints to
	"X" from "g".

2009-02-17  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (oldinclude_HEADERS): Set to includes/sys/sdt.h.
	(check): Explicitly set PWD and SYSTEMTAP_INCLUDES.
	* includes/sys/sdt.h: Moved from runtime dir.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.

2009-02-17  Elliott Baron  <ebaron@redhat.com>

	PR 9716
	* configure.ac: Replace pkgconfig tests for NSS/NSPR includes/libs
	with AC macros.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* doc/Makefile.in: Likewise.
	* doc/SystemTap_Tapset_Reference/Makefile.in: Likewise.
	* testsuite/Makefile.in: Likewise.
	* testsuite/aclocal.m4: Likewise.
	* testsuite/configure: Likewise.

2009-02-16  Mark Wielaard  <mjw@redhat.com>

	PR 9850
	* dtrace: Use a list of arguments for call.

2009-02-16  Mark Wielaard  <mjw@redhat.com>

	PR 9851
	* dtrace: Use os.path.splitext instead of string.replace.

2009-02-16  Mark Wielaard  <mjw@redhat.com>

	PR 9849
	* dtrace: Use mkstemp.

2009-02-15  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwflpp::iterate_over_cu_labels): Handle missing DW_AT_low_pc
	* (dwarf_builder::build): Handle c++ via .probe, c via .label.

2009-02-13  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (dump_unwindsyms): Use \n instead of endl throughout
	for writing to the generated .c/.h files.

2009-02-12  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (procfs_derived_probe_group::emit_module_decls):
	Moved inclusion of procfs.c here from runtime/transport.c

2009-02-12  Mark Wielaard  <mjw@redhat.com>

	* translate.cxx (dump_unwindsyms): Use "\n" instead of endl in
	inner loops.

2009-02-11  Dave Brolley  <brolley@redhat.com>

	* stap-client: s/jar/zip/.