@@ -1,12 +1,45 @@
-Frank Ch. Eigler <fche@redhat.com>
-Martin Hunt <hunt@redhat.com>
-Li Guanglei <guanglei@cn.ibm.com>
-Joshua Stone <joshua.i.stone@intel.com>
-David Smith <dsmith@redhat.com>
-Graydon Hoare <formerly graydon@redhat.com>
-Jim Keniston <jkenisto@us.ibm.com>
-Roland McGrath <roland@redhat.com>
-Will Cohen <wcohen@redhat.com>
-Thang Nguyen <thang.p.nguyen@intel.com>
-Tom Zanussi <zanussi@us.ibm.com>
-... and others!
+Ananth N Mavinakayanahalli
+Anil Keshavamurthy
+anithra
+Charles Spirakis
+Dave Brolley
+Dave Nomura
+David Smith
+David Wilder
+Don Domingo
+Elliott Baron
+Eugene Teo
+Eugeniy Meshcheryakov
+Frank Ch. Eigler
+Graydon Hoare
+Hien Nguyen
+James Bottomley
+Jim Keniston
+Josh Stone
+Kent Sebastian
+Kevin Stafford
+K Prasad
+Li Guanglei
+Mark McLoughlin
+Mark Wielaard
+Martin Hunt
+Masami Hiramatsu
+Michael Meeks
+Mike Mason
+Nobuhiro Tachino
+Phil Muldoon
+Prerna
+Rajan Arora
+Roland McGrath
+Shaohua Li
+Srikar Dronamraju
+Srinivasa DS
+Stan Cox
+Thang Nguyen
+Theodore Ts'o
+Tim Moore
+Tom Zanussi
+Wenji Huang
+Will Cohen
+William Cohen
+Zhaolei
